# queue_manager

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  consumer_counter.h  consumer_thread.hpp  ex1.cpp  ex2.cpp  ex3.cpp  producer.hpp  producer_thread_loop_example.h
lib/: CMakeLists.txt  common.h
lib/consumer/: base_consumer.hpp
lib/manager/: base_mqueue_manager.hpp  base_queue_manager.hpp  base_squeue_manager.hpp  mpsc_mqueue_manager.hpp  mpsc_queue_manager.hpp
lib/producer/: base_producer.hpp
lib/queue/: base_queue.hpp  block_concurrent_queue.hpp  lock_free_queue.hpp  queue_state.hpp
tests/: CMakeLists.txt  test1.cpp  test_bc_queue.cpp  test_lf_queue.cpp  test_mpsc_mq_manager.cpp
tests/benchmarks/: CMakeLists.txt  bench1.cpp
